--- a/index.html
+++ b/index.html
@@ -5,9 +5,21 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>chaingear-frontend</title>
     <style type="text/css">
-    	.el-tabs__nav-scroll {
+    	#tab-first {
     		display: none;
     	}
+      #tab-second {
+        display: none;
+      }
+      #tab-third {
+        display: none;
+      }
+      #tab-fourth {
+        display: none;
+      }
+      #tab-fifth {
+        display: none;
+      }
     </style>
   </head>
   <body>
