--- a/index.html
+++ b/index.html
@@ -2,25 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>chaingear-frontend</title>
-    <style type="text/css">
-    	#tab-first {
-    		display: none;
-    	}
-      #tab-second {
-        display: none;
-      }
-      #tab-third {
-        display: none;
-      }
-      #tab-fourth {
-        display: none;
-      }
-      #tab-fifth {
-        display: none;
-      }
-    </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
+    <title>Chaingear</title>
+    <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet">
   </head>
   <body>
     <div id="app"></div>
